// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupedVerticalBarChart snapShot testing renders enabledLegendsWrapLines correctly 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_4"
  >
    <div
      id="defaultTabbableElement_5"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }

      data-focuszone-id="FocusZone13"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="Vertical bar chart with 3 grouped bar series. The X axis displays categories. The Y axis displays values. "
        focusable="false"
        height="0"
        role="region"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_4"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
          id="yAxisGElementchart_4"
          transform="translate(40, 0)"
        />
        <rect
          fill="transparent"
          height="100%"
          style="pointer-events: none;"
          width="100%"
        />
        <g>
          <g
            transform="translate(19, 0)"
          >
            <rect
              aria-label="2000. MetaData1, 66."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#0078d4"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="0"
              width="9"
              x="0"
              y="-36"
            />
            <rect
              aria-label="2000. MetaData2, 13."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00188f"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="10"
              y="-36"
            />
            <rect
              aria-label="2000. MetaData3, 34."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00bcf2"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="20"
              y="-36"
            />
          </g>
          <g
            transform="translate(-28, 0)"
          >
            <rect
              aria-label="2010. MetaData1, 14."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#0078d4"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="0"
              y="-36"
            />
            <rect
              aria-label="2010. MetaData2, 90."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00188f"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="10"
              y="-36"
            />
            <rect
              aria-label="2010. MetaData3, 33."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00bcf2"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="20"
              y="-36"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div
          aria-label="Legends"
          aria-multiselectable="false"
          class=
              ms-FocusZone
              &:focus {
                outline: none;
              }
          data-focuszone-id="FocusZone14"
          data-tabster="{\\"uncontrolled\\": {}}"
          role="listbox"
        >
          <div
            class=
                ms-OverflowSet
                {
                  display: flex;
                  flex-wrap: wrap;
                  justify-content: unset;
                  position: relative;
                }
            role="group"
          >
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="MetaData1"
                aria-posinset="1"
                aria-selected="false"
                aria-setsize="3"
                class=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                    :host(.ms-Fabric--isFocusVisible) &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable="true"
                role="option"
                tabindex="0"
              >
                <div
                  class=

                      {
                        background-color: #0078d4;
                        border-color: #0078d4;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #0078d4, #0078d4);
                        opacity: ;
                      }
                />
                <div
                  class=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  MetaData1
                </div>
              </button>
            </div>
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="MetaData2"
                aria-posinset="2"
                aria-selected="false"
                aria-setsize="3"
                class=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                    :host(.ms-Fabric--isFocusVisible) &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable="true"
                role="option"
                tabindex="-1"
              >
                <div
                  class=

                      {
                        background-color: #00188f;
                        border-color: #00188f;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #00188f, #00188f);
                        opacity: ;
                      }
                />
                <div
                  class=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  MetaData2
                </div>
              </button>
            </div>
            <div
              class=
                  ms-OverflowSet-item
                  {
                    display: inherit;
                    flex-shrink: 0;
                  }
              role="none"
            >
              <button
                aria-label="MetaData3"
                aria-posinset="3"
                aria-selected="false"
                aria-setsize="3"
                class=

                    {
                      align-items: center;
                      background: none;
                      border: none;
                      cursor: pointer;
                      display: flex;
                      outline: transparent;
                      padding-bottom: 8px;
                      padding-left: 8px;
                      padding-right: 8px;
                      padding-top: 8px;
                      position: relative;
                      text-transform: capitalize;
                    }
                    &::-moz-focus-inner {
                      border: 0;
                    }
                    .ms-Fabric--isFocusVisible &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                      outline-color: #605e5c;
                    }
                    :host(.ms-Fabric--isFocusVisible) &:focus:after {
                      border: 1px solid transparent;
                      bottom: 1px;
                      content: "";
                      left: 1px;
                      outline: 1px solid #605e5c;
                      position: absolute;
                      right: 1px;
                      top: 1px;
                      z-index: 1;
                    }
                    @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){:host(.ms-Fabric--isFocusVisible) &:focus:after {
                      outline-color: #605e5c;
                    }
                data-is-focusable="true"
                role="option"
                tabindex="-1"
              >
                <div
                  class=

                      {
                        background-color: #00bcf2;
                        border-color: #00bcf2;
                        border: 1px solid;
                        content: ;
                        height: 12px;
                        margin-right: 8px;
                        width: 12px;
                      }
                      @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                        content: linear-gradient(to right, #00bcf2, #00bcf2);
                        opacity: ;
                      }
                />
                <div
                  class=

                      {
                        -moz-osx-font-smoothing: grayscale;
                        -webkit-font-smoothing: antialiased;
                        color: #323130;
                        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                        font-size: 12px;
                        font-weight: 400;
                        line-height: 16px;
                        opacity: ;
                      }
                >
                  MetaData3
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GroupedVerticalBarChart snapShot testing renders hideLegend correctly 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_4"
  >
    <div
      id="defaultTabbableElement_5"
    />
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }

      data-focuszone-id="FocusZone13"
      data-tabster="{\\"uncontrolled\\": {}}"
    >
      <svg
        aria-label="Vertical bar chart with 3 grouped bar series. The X axis displays categories. The Y axis displays values. "
        focusable="false"
        height="0"
        role="region"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_4"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& text {
                fill: CanvasText;
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& line {
                opacity: 0.1;
                stroke: CanvasText;
              }
          id="yAxisGElementchart_4"
          transform="translate(40, 0)"
        />
        <rect
          fill="transparent"
          height="100%"
          style="pointer-events: none;"
          width="100%"
        />
        <g>
          <g
            transform="translate(19, 0)"
          >
            <rect
              aria-label="2000. MetaData1, 66."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#0078d4"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="0"
              width="9"
              x="0"
              y="-36"
            />
            <rect
              aria-label="2000. MetaData2, 13."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00188f"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="10"
              y="-36"
            />
            <rect
              aria-label="2000. MetaData3, 34."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00bcf2"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="20"
              y="-36"
            />
          </g>
          <g
            transform="translate(-28, 0)"
          >
            <rect
              aria-label="2010. MetaData1, 14."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#0078d4"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="0"
              y="-36"
            />
            <rect
              aria-label="2010. MetaData2, 90."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00188f"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="10"
              y="-36"
            />
            <rect
              aria-label="2010. MetaData3, 33."
              class=

                  {
                    cursor: default;
                  }
              data-is-focusable="true"
              fill="#00bcf2"
              height="1"
              opacity=""
              role="img"
              rx="0"
              tabindex="-1"
              width="9"
              x="20"
              y="-36"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
